# lab4_win

./: CMakeLists.txt
.github/workflows/: github-actions-demo.yml
formatter_ex_lib/: CMakeLists.txt  CMakeLists.txt.save  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
